manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: add-task
  template:
    metadata:
      labels:
        app: add-task
    spec:
      containers:
      - name: add-task-container
        image: devopsinsiders/add-task
        ports:
        - containerPort: 8000
