manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addtaskingress
  annotations:
    # kubernetes.io/ingress.class: addon-http-application-routing
    # kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: addtaskservice.gaggidevops.online
    http:
      paths: 
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: addtaskservice
            port: 
              number: 80
